logs/Slang/chapter-5/5.10-structure-replication.sv.log
name: structure-replication
description: Structure replication assignment tests
should_fail: 0
tags: 5.10
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.10-structure-replication.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.10-structure-replication.sv:8:29: error: language feature not yet supported
  struct {int X,Y,Z;} XYZ = '{3{1}};
                            ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.10-structure-replication.sv:14:10: error: language feature not yet supported
    v1 = '{2{'{3{'{a,'{2{b,c}}}}}}};
         ^~~~~~~~~~~~~~~~~~~~~~~~~~
